fixed off center of get ready image

--- a/css/game.css
+++ b/css/game.css
@@ -37,6 +37,8 @@
     width:227px;
     height:195px;
     margin-top:120px;
+    margin-left:auto;
+    margin-right:auto;
 }
 
 .finalScore{
